jboot v3.4.0:
新增：门户网关 Gateway 新增自定义负载均衡策略的支持
新增：AttachmentContainer 组件，方便自定义把附件上传到其他第三方任何平台
新增：全新的文档地址 和 Jboot 官网
修复：数据源 Datasource 的  validationQuery 属性配置不生效的问题
修复：SqlDebugPrinter 对参数为 Boolean 数据输出的格式不正确的问题
优化：升级 JFinal-Weixin 版本
优化：删除 JbootActionReporter 一些不必要的方法
优化：删除一些不必要的 注释信息
优化：修改 JbootPaginateDirective 自动去获取当前的 page 信息，而不需配置
优化：移除 JbootHttpImpl 默认的 content-type 配置



jboot v3.3.5:
修复：通过门户网关下载文件 或者 渲染图片可能出现乱码的问题
优化：重构 Http 工具类里的 HttpRequest 里的某些方法
优化：增强 JbootActionReporter 功能，使之可以输出未被执行的拦截器 以及 Controller 的执行时间



jboot v3.3.4:
修复：当 Action 定义在父类后，JbootActionReporter 获取不到 Method 而出错的问题
优化：升级 nacos 和 Apollo 客户端到最新版本
优化：JbootHttpImpl Post 提交数据资源可能存在不正常关闭的情况



jboot v3.3.3:
修复：JbootActionReporter 对拦截器 Interceptor 输出的行号不正确的问题



jboot v3.3.2:
新增：新增 JbootActionReporter 用于代替 JFinal 的 ActionReporter，更精准的地位方法
优化：重命名 ParaValidateInterceptor 为 ValidateInterceptor
修复：@EmptyValidate @RegexValidate 的 message 在 ajax 上提示不正确的问题



jboot v3.3.1:
新增：Seata tcc 的支持
新增：RegexValidate 注解对 Controller 进行验证的支持
优化：ClassScanner 排除对 protobuf 扫描
优化：JbootUndertowConfig 排除对 Jboot.java 的依赖
优化：升级 JFinal、FastJson 等到最新版本



jboot v3.3.0:
新增：ObjectUtil 工具类，用于对 Object  进行对比等操作
新增：JbootModel.useFirst() 方法，更加方便在读写分离的场景下进行使用
新增：JsonTimestampPattern 配置，方便控制 json 的日期输出
新增：JbootServiceBase.findListByIds() 方法
新增：Columns 新增 safeCreate 方法
优化：重构 JbootConfigChangeListener ，方便监听远程配置的每个值的变化
优化：JbootServiceBase.syncModels 由传入 List 修改为 Collection
优化：升级 Seata 到最新版本 1.3.0
优化：升级远程配置 nacos、Apollo 到最新版本
优化：删除 JbootrpcManager 里的某些无用的逻辑判断
修复：当有多数据源时，join 会参数数据不正确的问题
修复：当主键是 String 类型时，DAO.findListByIds() 没有返回数据的问题
修复：CookieUtil 当设置的时间为 0 或者 -1 的时候，时间验证不正确的问题



jboot v3.2.9:
修复：Columns.in() 对传入 int[] long[]  short[] 不能正确支持的问题



jboot v3.2.8:
新增：Columns.toWherePartSql() 方便构建 sql
新增：ObjectFunc.java 方便通过 Java8 lambda 调用
新增：JbootServiceJoiner.joinMany 方法，方便进行一对多的查询
新增：JbootServiceJoiner.joinManyByTable  方法，方便通过第三映射表进行多对多查询
新增：JbootServiceJoiner.syncModels 方法，用过同步数据到数据库
修复：Columns.likeAppendPrecent 传入空数据时结果出错的问题